--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><%= locals.title %></title>
+    <meta name="description" content=" <%= locals.description %> ">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
-    Hello World
+    <div class="container">
+        <%- include('layouts/header.ejs') %>
+        <div class="wrapper">
+            <div class="main-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nemo tenetur at necessitatibus saepe suscipit esse expedita magnam corrupti aperiam.</p>
+                <img src="/img/image.png">
+            </div>
+            <div class="latest_blogs">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, iusto.
+            </div>
+        </div>
+        <%- include('layouts/footer.ejs') %>
+    </div>
+   
+  
 </body>
 </html>
