-including header and footer ejs in about and blogs section
-Add Blog, edit and delete section available on admin page

-now all blogs is  showing in admin page

--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -13,6 +13,7 @@
     <div class="container">
         <%- include('layouts/header.ejs') %>
         <div class="wrapper">
+            <%= locals.title %>
             
         </div>
         <%- include('layouts/footer.ejs') %>
