--- a/views/add-blog.ejs
+++ b/views/add-blog.ejs
@@ -17,18 +17,28 @@
                 <label for="title">Başlık:</label>
                 <input type="text" id="title" name="title" required>
             </div>
+
             <div class="form-group">
-                <label for="category">Kategori:</label>
-                <input type="text" id="category" name="category" required>
+                <label for="content">İçerik:</label>
+                <textarea id="editor" name="content"></textarea> <!-- CKEditor Editörü -->
             </div>
-                    
+
             <div class="form-group">
-                <label for="image_url">Resim URL:</label>
-                <input type="text" id="image_url" name="image_url">
+                <label for="image_url">Resim Ekle:</label>
+                <!--<input type="file" id="image_upload" name="image_upload" accept="image/*">-->
+                <!-- Ayrıca resim URL'si girilebilecek bir alan -->
+                <input type="text" id="image_url" name="image_url" placeholder="Resim URL'i girin">
             </div>
             
-            <textarea id="editor" name="content"></textarea>  <!-- CKEditor Editörü -->
-    
+            <div class="form-group">
+                <label for="category">Kategori:</label>
+                <select id="category" name="category" required>
+                    <option value="fashion">Fashion</option>
+                    <option value="food">Food</option>
+                    <option value="travel">Travel</option>
+                    <!-- Diğer kategoriler buraya eklenebilir -->
+                </select>
+            </div>
             <button type="submit">Blog Ekle</button>
         </form>
     </div>
@@ -36,9 +46,11 @@
 </body>
 <script>
     ClassicEditor
-      .create(document.querySelector('#editor'))
-      .catch(error => {
-          console.error(error);
-      });
-  </script>
+        .create(document.querySelector('#editor'), {
+            toolbar: ['heading', '|', 'bold', 'italic', 'link', 'bulletedList', 'numberedList', 'blockQuote']
+        })
+        .catch(error => {
+            console.error(error);
+        });
+</script>
 </html>
