--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -6,7 +6,7 @@
             <li><a href="/" class="">Home</a></li>
             <li><a href="/blogs" class="">Blogs</a></li>
             <li><a href="/about" class="">About Me</a></li>
-            <li><a href="/contact" class="">Contact</a></li>
+            <li><a href="mailto:gokbeerkgok@gmail.com?subject=Dear Gokberk,">Contact</a></li>
         </ul>
     </nav>
     <div class="header_button">
