--- a/views/add-blog.ejs
+++ b/views/add-blog.ejs
@@ -29,16 +29,15 @@
                 <!-- Ayrıca resim URL'si girilebilecek bir alan -->
                 <input type="text" id="image_url" name="image_url" placeholder="Resim URL'i girin">
             </div>
-            
             <div class="form-group">
                 <label for="category">Kategori:</label>
                 <select id="category" name="category" required>
-                    <option value="fashion">Fashion</option>
-                    <option value="food">Food</option>
-                    <option value="travel">Travel</option>
-                    <!-- Diğer kategoriler buraya eklenebilir -->
+                    <% categories.forEach(function(category) { %>
+                        <option value="<%= category.name %>"><%= category.name %></option>
+                    <% }) %>
                 </select>
             </div>
+           
             <button type="submit">Blog Ekle</button>
         </form>
     </div>
