--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -8,14 +8,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdn.ckeditor.com/ckeditor5/36.0.1/classic/ckeditor.js"></script>
-    <link rel="stylesheet" href="admin.css">
+    <link rel="stylesheet" href="../admin.css">
 
 </head>
 <body>
     <div class="container">
       <div class="blog-admin-wrapper">
         <h2>Blog Yönetimi</h2>
-        
         <div class="blog-list">
             <% blogs.forEach(function(blog) { %>
                 <div class="blog-item">
