--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,9 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, iusto.
             </div>
         </div>
+        <%- include('layouts/recent-posts.ejs') %>
         <%- include('layouts/footer.ejs') %>
+      
     </div>
    
   
