--- a/public/blogs.css
+++ b/public/blogs.css
@@ -6,7 +6,7 @@ body{
 .blog-admin-wrapper {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 60px;
+    padding: 40px;
 }
 
 .blog-list {
@@ -77,3 +77,18 @@ body{
 }
 
 
+/*Filtered Category*/
+.filtered-category-wrapper{
+    margin-top: 20px;
+  
+}
+.filtered-category-meta{
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    color: #000; /* Metin rengi */
+    gap: 20px;
+}
+.filtered-category-meta p{
+    
+}
