--- a/views/about.ejs
+++ b/views/about.ejs
@@ -13,7 +13,10 @@
     <div class="container">
         <%- include('layouts/header.ejs') %>
         <div class="wrapper">
-            
+            <div class="main-content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dignissimos sint maiores ullam sit ipsum dolorem molestias blanditiis nisi sed, recusandae temporibus beatae possimus impedit?</p>
+                <img src="/img/about.png" style="height:300px;object-fit: cover; border-radius: 10% ;">
+            </div>
         </div>
         <%- include('layouts/footer.ejs') %>
     </div>
@@ -21,3 +24,4 @@
   
 </body>
 </html>
+
