--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -29,7 +29,7 @@
         <div class="blog-admin-wrapper">
             <div class="blog-list">
                 <% if(blogs =="" || blogs == null) { %>
-                    <p>Bu kategoride blog yok</p>
+                    <p>Nothing here.</p>
                 <% } else{ %>
                 <% blogs.forEach(function(blog) { %>
                     <div class="blog-item">
